--- a/forms.html
+++ b/forms.html
@@ -25,7 +25,7 @@
   </style>
 </head>
 <body>
-    <form action="_self" method="post">
+    <form action="" method="post">
         <fieldset>
             <legend>Basic information</legend>
 
