--- a/forms.html
+++ b/forms.html
@@ -14,7 +14,7 @@
     }
     fieldset{
         width: 500px;
-        margin:20px auto auto auto;
+        margin:20px auto;
         border-radius: 20px;
     }
     button[type="submit"] {
