--- a/forms.html
+++ b/forms.html
@@ -45,7 +45,7 @@
             <input type="date" name="dateOfBirth" id="dateOfBirth" required> <br>
 
             <label for="phoneNumber">Phone Number</label>
-            <input type="tel" name="phoneNumber" id="phoneNumber" required> <br>
+            <input type="number" name="phoneNumber" id="phoneNumber" required> <br>
 
             <label for="country"> Country of residence</label>
             <select name="Country" id="Country" required>
